--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:layout_height="match_parent"
             android:autofillHints="password"
             android:hint="@string/prompt_password"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
