--- a/app/src/main/res/layout/item_msg.xml
+++ b/app/src/main/res/layout/item_msg.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginVertical="5dp"
     app:cardCornerRadius="5dp">
@@ -13,7 +13,8 @@
         android:layout_height="match_parent"
         android:layout_marginVertical="15dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="10dp"
         android:gravity="center_vertical"
         android:textColor="@color/black"
-        android:textSize="22sp" />
+        android:textSize="16sp" />
 </androidx.cardview.widget.CardView>
